Fixed spacing on summary cases

--- a/src/Fence.css
+++ b/src/Fence.css
@@ -33,6 +33,21 @@
   width: 119px;
 }
 
+.legend-item3 {
+  margin: 0px 79px;
+  width: 119px;
+}
+
+.legend-item4 {
+  margin: 0px 20px;
+  width: 119px;
+}
+
+.legend-item5 {
+  margin: 0px 51px;
+  width: 119px;
+}
+
 .block {
   margin: 4px 15px 0px 15px;
   align-items: center;
